[package]
edition = "2018"
name = "tupinject"
version = "0.1.0"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]
# links = "detours"

[lib]
name = "tupinject"
path = "lib/mod.rs"
crate-type=["cdylib"]

[dependencies]
named_pipe = "0.4.1"
wstr = "*"
winapi = { version =  "0.3.6", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi", "errhandlingapi"] }
detours-sys = { git = "https://github.com/AlphaModder/detours-sys"}
# [target.tupspawn]
# rustflags = "-ldetours"